--- a/frontend/src/assets/styles/tailwind/index.css
+++ b/frontend/src/assets/styles/tailwind/index.css
@@ -17,7 +17,7 @@
 	}
 
   body {
-    @apply text-gray-500 dark:text-gray-400 text-sm bg-gray-100 dark:bg-gray-900 leading-normal;
+    @apply text-gray-500 dark:text-gray-400 text-sm bg-gray-100 dark:bg-msgray-900 leading-normal;
     -webkit-font-smoothing: antialiased;
   }
 
